# zkUniswap

./: .gitmodules  Cargo.toml  Makefile  README.md  foundry.toml  remappings.txt
.github/workflows/: lint.yml  test.yml
contracts/: BonsaiCallbackReceiver.sol  BonsaiStarterLowLevel.sol  UniswapV3Factory.sol  UniswapV3Manager.sol  UniswapV3Pool.sol
contracts/interfaces/: IUniswapV3PoolDeployer.sol
contracts/lib/: NFTRenderer.sol
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
relay/examples/: callback_request.rs
script/: DeployDevelopment.s.sol
scripts/: Deploy.s.sol  DeployDevelopment.s.sol
temp/src/: abi.rs  bit_math.rs  full_math.rs  sqrt_price_math.rs  tick.rs  tick_math.rs
tests/: Assertions.sol  TestUtils.sol  UniswapV3Factory.t.sol  UniswapV3Manager.t.sol  UniswapV3NFTManager.t.sol  UniswapV3Pool.Swaps.t.sol  UniswapV3Pool.Utils.t.sol  UniswapV3Pool.t.sol  UniswapV3Quoter.t.sol
tests/lib/: Math.t.sol  Oracle.t.sol  Path.t.sol  Tick.t.sol
ui/src/abi/: Pool.json
uniswap-v3-math/: Cargo.toml  README.md
uniswap-v3-math/src/: abi.rs  swap_math.rs  tick_bitmap.rs  unsafe_math.rs  utils.rs
