[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "method_name"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.17.0", default-features = false, features = [
    'std',
] }
uniswap-v3-math = { path = "../../uniswap-v3-math", default-features = false }
