[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swap"
path = "src/bin/swap.rs"

[dependencies]
ethabi = { version = "18.0", default-features = false }
# Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
radium = "=0.7.1"
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "da5bc39089c6dba8b03510837f1c7363ed3cc8b7", default-features = false, features = [
    "std",
] }
uniswap_v3_math = { path = "../../uniswap-v3-math", default-features = false }
ethers-core = { version = "2.0" }

[patch.crates-io]
radium = { git = "https://github.com/bitvecto-rs/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }

[profile.release]
lto = true
opt-level = 3

[workspace]
